Removed API DLL depedency for the main Wind API and referenced it to source C# for possible customization/editing. Interop DLL reference in the Wind API source not lifted, however.

--- a/WAPIWrapperCSharp/Samples/WindConsoleAppSample/WindConsoleAppSample/WindConsoleAppSample.csproj
+++ b/WAPIWrapperCSharp/Samples/WindConsoleAppSample/WindConsoleAppSample/WindConsoleAppSample.csproj
@@ -105,10 +105,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WAPIWrapperCSharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\WAPIWrapperCSharp.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -116,6 +112,12 @@
     <Compile Include="RBreakSample.cs" />
     <Compile Include="TradeSample.cs" />
     <Compile Include="WindDataMethod.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\WAPIWrapperCSharp\WAPIWrapperCSharp.csproj">
+      <Project>{49cae149-887a-4597-808a-d40a30c1c83b}</Project>
+      <Name>WAPIWrapperCSharp</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
