--- a/WAPIWrapperCSharp/Samples/WindEDBFormSample/WindEDBFormSample/WindEDBFormSample.csproj
+++ b/WAPIWrapperCSharp/Samples/WindEDBFormSample/WindEDBFormSample/WindEDBFormSample.csproj
@@ -73,10 +73,6 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="WAPIWrapperCSharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\WAPIWrapperCSharp.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Form1.cs">
@@ -108,6 +104,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\WAPIWrapperCSharp\WAPIWrapperCSharp.csproj">
+      <Project>{49cae149-887a-4597-808a-d40a30c1c83b}</Project>
+      <Name>WAPIWrapperCSharp</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
