--- a/WAPIWrapperCSharp/Samples/WindFormsAppSample1/WindFormsAppSample1/WindFormsAppSample1.csproj
+++ b/WAPIWrapperCSharp/Samples/WindFormsAppSample1/WindFormsAppSample1/WindFormsAppSample1.csproj
@@ -107,9 +107,6 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="WAPIWrapperCSharp">
-      <HintPath>..\..\..\WAPIWrapperCSharp.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Form1.cs">
@@ -142,6 +139,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\WAPIWrapperCSharp\WAPIWrapperCSharp.csproj">
+      <Project>{49cae149-887a-4597-808a-d40a30c1c83b}</Project>
+      <Name>WAPIWrapperCSharp</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
