Revert "Lifted the API DLLs for the templates and replaced with the in-solution build for the top-level API DLL, WindAPI (WAPIWrapperCSharp)"
This reverts commit 043af6ec405da6f59539fb45040d011e285126c4.

--- a/WAPIWrapperCSharp/test/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/WAPIWrapperCSharp/test/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
@@ -41,17 +41,14 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WAPIWrapperCSharp">
+      <HintPath>..\..\..\C#_Teach_20141216\C#_Teach\TeachSample_C#\WAPIWrapperCSharp\WAPIWrapperCSharp.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WindDataMethod.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\src\WAPIWrapperCSharp\WAPIWrapperCSharp.csproj">
-      <Project>{49cae149-887a-4597-808a-d40a30c1c83b}</Project>
-      <Name>WAPIWrapperCSharp</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
